# starter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_prompt.py
{{ cookiecutter.__project_slug }}/: .env  .pre-commit-config.yaml  Procfile  biome.json  docker-compose.yml  justfile  mise.toml  package.json  pyproject.toml  rollup.config.mjs  vite.config.js
{{ cookiecutter.__project_slug }}/conf/: asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.__project_slug }}/config/: asgi.py  settings.py  urls.py
{{ cookiecutter.__project_slug }}/docker/mysql/: 10-setup-database.sql
{{ cookiecutter.__project_slug }}/docker/postgres/: 10-setup-database.sql
{{ cookiecutter.__project_slug }}/static/src/: app.js
{{ cookiecutter.__project_slug }}/static/src/scss/: app.scss  overrides.scss
{{ cookiecutter.__project_slug }}/static_src/: app.mjs
{{ cookiecutter.__project_slug }}/static_src/scss/: app.scss
{{ cookiecutter.__project_slug }}/{{ cookiecutter.__project_slug }}/: apps.py  models.py
