[project]
name = "{{ cookiecutter.__project_slug }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
description = "{{ cookiecutter.project_description }}"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2",
    "whitenoise>=6.11",
    "django-rich>=2.2.0",
    "environs[django]>=14.3.0",
    "django-extensions>=4.1",
]

[dependency-groups]
dev = [
    "django-browser-reload",
    {%- if cookiecutter.debug_toolbar %}"django-debug-toolbar",{% endif %}
    "django-simple-factory",
    "ruff",
    "ipdb",
    "djade",
    "coverage",
    "tblib",
    "honcho",
]

[tool.ruff.isort]
force-single-line = true

[tool.coverage.run]
branch = true
parallel = true
omit = ["conf/*.py", "manage.py"]
concurrency = ["multiprocessing"]
source = ["."]
command_line = "manage.py test --keepdb --parallel"

[tool.coverage.report]
omit = ["conf/*.py", "manage.py"]
show_missing = true
skip_covered = true

[tool.ruff.lint.isort.sections]
# Group all Django imports into a separate section.
"django" = ["django"]
