[project]
name = "{{ cookiecutter.__project_slug }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
description = "{{ cookiecutter.project_description }}"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "whitenoise>=6.11",
    "django-rich>=2.2.0",
    "environs[django]>=14.5.0",
    "django-tasks>=0.10.0",
    "django-http-compression[brotli]>=1.2.0",
    "uvicorn>=0.38.0",
    "django-vite>=3.1.0",
    "{% if cookiecutter.database == 'mysql' %}mysqlclient>=2.2.7{% elif cookiecutter.database == 'postgres'%}psycopg[binary]>=3.3.1{% endif %}"
]

[dependency-groups]
dev = [
    "django-browser-reload",
    "django-watchfiles",
    {%- if cookiecutter.debug_toolbar %}"django-debug-toolbar",{% endif %}
    "factory_boy",
    "ruff",
    "ipdb",
    "djade",
    "coverage",
    "tblib",
]

[tool.ruff.isort]
force-single-line = true

[tool.coverage.run]
branch = true
parallel = true
omit = ["conf/*.py", "manage.py"]
concurrency = ["multiprocessing"]
source = ["."]
command_line = "uv run manage.py test --keepdb --parallel"

[tool.coverage.report]
omit = ["conf/*.py", "manage.py"]
show_missing = true
skip_covered = true

[tool.ruff.lint.isort.sections]
# Group all Django imports into a separate section.
"django" = ["django"]
